--- a/HFObjc/HFObjc/Base.lproj/Main.storyboard
+++ b/HFObjc/HFObjc/Base.lproj/Main.storyboard
@@ -54,13 +54,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="erR-ZD-yIY"/>
                     <connections>
                         <outlet property="racButton" destination="2sY-sZ-J05" id="33n-Bg-Mpe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-74" y="-564"/>
+            <point key="canvasLocation" x="864.79999999999995" y="-564.46776611694156"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="BSY-wU-Cwm">
@@ -148,7 +149,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ukU-jN-R7x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="678" y="-564"/>
+            <point key="canvasLocation" x="1616.8" y="-564.46776611694156"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tgx-Qv-oyD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4G6-cV-NNJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YF9-hK-g3z">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LsZ-Hq-ntR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eBx-Pt-4tf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-74.400000000000006" y="-564.46776611694156"/>
         </scene>
     </scenes>
 </document>
